# diploma

./: .gitignore  check_results.py  final_tests.h  notes.md  reader.h
code/: CMakeLists.txt  algos.h  conanfile.txt  final_tests.h  main.cpp  optim_struct.h  reader.cpp
code/header/: algos.h  final_tests.h  optim_struct.h  pointspreparation.h  reader.h
code/src/: main.cpp  reader.cpp
