cmake_minimum_required(VERSION 3.21)
project(start)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
find_package(Ceres REQUIRED)
find_package( OpenCV REQUIRED )
set(CMAKE_CXX_STANDARD 20)
set(OPENCV_ENABLE_NONFREE)
add_library(lb reader.cpp algos.h final_tests.h optim_struct.h pointspreparation.h reader.h)
include_directories( ${OpenCV_INCLUDE_DIRS})
include_directories(${CERES_INCLUDE_DIRS})
link_libraries(stdc++fs)
add_executable(start main.cpp)
target_link_libraries( start ${OpenCV_LIBS} lb)
target_link_libraries( start lb)
target_link_libraries( start ${CERES_LIBRARIES})
