cmake_minimum_required(VERSION 3.20)
project(start)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
set(EIGEN_INCLUDE_DIR ${SOURCE_DIR}/Common)
find_package(Eigen3 REQUIRED)
find_package(Ceres REQUIRED)
find_package( OpenCV REQUIRED )
set(CMAKE_CXX_STANDARD 20)
set(OPENCV_ENABLE_NONFREE)
add_library(lb reader.cpp algos.h final_tests.h optim_struct.h reader.h)
include_directories( ${OpenCV_INCLUDE_DIRS})
include_directories(${EIGEN3_INCLUDE_DIR})
include_directories(${CERES_INCLUDE_DIRS})
link_libraries(stdc++fs)
add_executable(start main.cpp)
target_link_libraries( start ${OpenCV_LIBS} lb)
target_link_libraries( start lb)
target_link_libraries( start ${CERES_LIBRARIES})